--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,16 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+footer {
+  background-color: #1a1a1a; /* Dark grey */
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  padding: 20px;
+}
+
+.email-link {
+  color: rgb(90, 90, 255);
+}
+
