--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,10 +32,58 @@ footer {
   color: rgb(132, 132, 236);
 }
 
-
-.quote-text{
+.quote-text {
   font-style: italic;
   font-family: "Playwrite HU", cursive;
   font-optical-sizing: auto;
   font-weight: 100;
+}
+
+.perspective-800 {
+  perspective: 800px;
+}
+.cube {
+  width: 50%;
+  height: 50%;
+  position: relative;
+  transform-style: preserve-3d;
+  animation: spin-cube 10s linear infinite;
+}
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+/* face transforms */
+.front {
+  transform: translateZ(100px);
+}
+.back {
+  transform: rotateY(180deg) translateZ(100px);
+}
+.right {
+  transform: rotateY(90deg) translateZ(100px);
+}
+.left {
+  transform: rotateY(-90deg) translateZ(100px);
+}
+.top {
+  transform: rotateX(90deg) translateZ(100px);
+}
+.bottom {
+  transform: rotateX(-90deg) translateZ(100px);
+}
+
+@keyframes spin-cube {
+  from {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  to {
+    transform: rotateX(360deg) rotateY(360deg);
+  }
 }
